# piktel_stepanienko

./: .gitignore  README.md
dkin_l3/: package.xml  setup.cfg  setup.py
dkin_l3/config/: joints.yaml  sizes.yaml
dkin_l3/dkin_l3/: KDL_DKIN.py  NONKDL_DKIN.py  XYZ_RPY.py  state_publisher.py
dkin_l3/launch/: kdl_dkin.launch.py  manip.launch.py  nonkdl_dkin.launch.py  robot.launch.py  state_pub.launch.py
dkin_l3/urdf/: manip.rviz  manip.urdf.xacro
ikin_l5/: package.xml  setup.cfg  setup.py
ikin_l5/config/: joints.yaml  links.yaml
ikin_l5/ikin_l5/: NONKDL_DKIN.py  XYZ_RPY.py  ikin.py  init_pub.py  jint_client.py  jint_control_srv.py  markers.py  ocmd.py  oint_client.py  oint_control_srv.py
ikin_l5/launch/: robot.launch.py
ikin_l5/urdf/: axes.rviz  manip.rviz  manip.urdf.xacro
int_l4/: package.xml  setup.cfg  setup.py
int_l4/config/: joints.yaml
int_l4/int_l4/: XYZ_RPY.py  init_pub.py  jcmd.py  jint_client.py  jint_control_srv.py  markers.py  ocmd.py  oint_control_srv.py
int_l4/launch/: axes.launch.py  axes_man.launch.py  robot.launch.py  robot_man.launch.py
int_l4/urdf/: axes.rviz  manip.rviz
interfaces/: CMakeLists.txt  package.xml
interfaces/srv/: Jint.srv  Oint.srv  Ointxyz.srv
turtle_manipulation/: package.xml  setup.cfg  setup.py
turtle_manipulation/config/: params.yaml
turtle_manipulation/launch/: move_turtle.py
turtle_manipulation/turtle_manipulation/: Constants.py  GetSpeed.py  Screen.py  move.py
turtle_manipulation/turtle_manipulation/launch/: move_turtle.py
urdf_l2/: package.xml  setup.cfg  setup.py
(+8 files in other folders)
